# market_terminal

./: .gitignore  .proxy  ARCHITECTURE.md  DEPLOY.md  README.md  TESTING_HANDOFF.md  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  market-data-refresh.yml
api/: [...path].ts  _ping.ts
batchers/: run_all_snapshot_fallbacks.bat
docs/: BENCHMARK_RATES_DB_HANDOFF.md  BENCHMARK_RATE_ANALYSIS_HANDOFF.md  DATA_PIPELINE_OVERVIEW.md  FUTURE_FEATURE_ROADMAP.md  HANDOFF_SIM_TO_LIVE.md  INTERNAL_REVIEW.md  LIVE_DATA_READINESS_ASSESSMENT.md  MARKET_TERMINAL_ROADMAP.md  MODULE_DATA_AUDIT.md  PLATFORM_DATA_CONNECTIVITY.md  POLYMARKET_INTEGRATION_HANDOFF.md  SIM_TO_LIVE_UPGRADE_PLAN.md
docs/completed/: BENCHMARK_RATE_ANALYSIS_HANDOFF.md  HANDOFF_SIM_TO_LIVE.md
docs/economics/: ECONOMICS_MACRO_SUMMARY.md
docs/features/: Agency Prime Electronic Trading Analytics Handoff.md  Feature Addition - Charting Studios (Macro & Market).md  Feature Addition - Desk Pulse (Funding & Squeeze Radar).md  Feature Addition - EDGAR Filing Intelligence (Regime, NLP & Exposure Analytics).md  Feature Addition - Inversion Detection Expansion.md  Feature Addition - Investor Sentiment & Behavior (SENT).md  Feature Addition - Market Lens Studio.md  Feature Addition - NEWS Terminal Module (Market News & Signal Intelligence).md  Feature Completion - NEWS NLP (Attention, Clusters, Signals).md  Master JSON Data Cache Handoff.md
macro_data_etl/: .gitignore  README.md  __init__.py  cli.py  pyproject.toml
macro_data_etl/config/: series_catalog.yaml  settings.yaml
macro_data_etl/scripts/: seed_demo.py
macro_data_etl/src/: __init__.py
macro_data_etl/src/analytics/: __init__.py  fed_probability.py
macro_data_etl/src/connectors/: __init__.py  bis.py  cme.py  http.py  imf.py  world_bank.py
macro_data_etl/src/extract/: __init__.py  extractors.py
macro_data_etl/src/load/: __init__.py  loaders.py
macro_data_etl/src/orchestration/: __init__.py  pipeline.py
macro_data_etl/src/transform/: __init__.py  transformers.py
macro_data_etl/src/utils/: __init__.py  logging.py  quality.py
macro_data_etl/tests/: test_connectors.py  test_quality.py  test_transform.py
market_data_pipeline/: .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
market_data_pipeline/config/: series_catalog.yaml
market_data_pipeline/docs/: example_payloads.json
market_data_pipeline/src/analytics/: __init__.py  _returns.py  bilello.py  cross_asset.py  drawdowns.py  eda.py  inflation.py  rates.py  regime.py  snapshot.py
market_data_pipeline/src/api/: __init__.py  app.py  models.py  service.py
market_data_pipeline/src/config/: __init__.py  catalog.py  settings.py
market_data_pipeline/src/connectors/: __init__.py  base.py  fred.py  polymarket.py  synthetic.py  yahoo.py
market_data_pipeline/src/ingestion/: __init__.py  manifest.py  news.py  pipeline.py
market_data_pipeline/src/quality/: __init__.py  checks.py
market_data_pipeline/src/scheduler/: __init__.py  jobs.py
market_data_pipeline/src/storage/: __init__.py  duckdb_store.py  parquet_archive.py  postgres_views.py  schemas.py
market_data_pipeline/src/transforms/: __init__.py  normalize.py
market_data_pipeline/tests/: test_analytics.py  test_api.py  test_connectors.py  test_quality.py  test_storage.py  test_transforms.py
market_lens_studio/: __init__.py
market_lens_studio/analytics/: __init__.py  all_time_highs.py  credit.py  cross_asset.py  drawdowns.py  event_study.py  inflation.py  myth_buster.py  rates.py  returns.py  vix_event_studies.py  volatility.py
market_lens_studio/api/: __init__.py  main.py  orchestrator.py  routes.py
market_lens_studio/config/: __init__.py  default_presets.yaml  schemas.py  view_registry.yaml
news_nlp/: README.md  __init__.py  cli.py  pyproject.toml
news_nlp/src/: api.py  cluster.py  entities.py  pipeline.py  schema.py  sentiment.py  settings.py  storage.py
news_nlp/tests/: test_sentiment.py
scripts/: fredapi_fallback.py  migrate-next-to-vite.mjs  shoot-economics.js
settings/: modules.config.json
src/: App.tsx  main.tsx
test/: smoke.spec.ts
vite-plugins/: dev-api.ts
(+257 files in other folders)
