[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-data-pipeline"
version = "0.1.0"
description = "Production market + macro data pipeline for a Bloomberg-style terminal (FRED · Yahoo · pluggable vendors)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
    "structlog>=24.1",
]

[project.optional-dependencies]
yahoo = ["yfinance>=0.2.40"]
postgres = ["sqlalchemy>=2.0", "psycopg[binary]>=3.1"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mdp = "market_data_pipeline.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
