[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-nlp"
version = "0.1.0"
description = "Financial-text NLP stage for the terminal — FinBERT sentiment, NER, and event clustering feeding the NEWS/SENT modules"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
# The model stack is optional so the package installs/imports without GPUs;
# the pipeline falls back to the lexicon scorer when these are absent.
nlp = [
    "transformers>=4.40",
    "torch>=2.2",
    "spacy>=3.7",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
news-nlp = "news_nlp.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
